--- a/puppet/modules/rbot/templates/redmine_urls.rb.erb
+++ b/puppet/modules/rbot/templates/redmine_urls.rb.erb
@@ -47,7 +47,7 @@ class RedmineUrlsPlugin < Plugin
     # chat messages
     return unless m.kind_of?(PrivMessage) && m.public?
 
-    refs = m.message.scan(/(?:^|\W)(\[\S+\]|r\d+|\#\d{3,}|\#\#[\w\d\-_\.\/]+|K\#[\w\d\-_\.\/]+|wiki:[\w-]+\#?[\w-]+|changeset:\w+|bz\d+|ERF\d+\-\d+)(?:$|\W)/i).flatten
+    refs = m.message.scan(/(?:^|\W)(\[\S+\]|r\d+|\#\d{3,}|\#\#[\w\d\-_\.\/]+|K\#[\w\d\-_\.\/]+|wiki:[\w-]+\#?[\w-]+|changeset:\w+|bz\d{3,}|ERF\d+\-\d+)(?:$|\W)/i).flatten
 
     # Do we have at least one possible reference?
     return unless refs.length > 0
@@ -119,7 +119,7 @@ class RedmineUrlsPlugin < Plugin
     when /wiki:([\w-]+\#?[\w-]+)/:
       [wiki_url(base, project, $1), :wiki]
 
-    when /bz(\d+)/i:
+    when /bz(\d{3,})/i:
       [bz_url($1), :ticket]
 
     when /(ERF\d+\-\d+)/i:
