--- a/puppet/modules/freight/templates/cron.erb
+++ b/puppet/modules/freight/templates/cron.erb
@@ -59,5 +59,5 @@ end
 files_to_remove.uniq!
 File.unlink(*files_to_remove)
 
-system "sudo -u <%= @user %> /usr/local/bin/freight-cache -c <%= @home %>/freight.conf"
+system "sudo -u <%= @user %> /usr/bin/freight-cache -c <%= @home %>/freight.conf"
 system "chown -R <%= @user %> <%= @home %>"
