Disable file resource in debug_rsync and enable indexes on vhost

--- a/puppet/modules/web/templates/debugs.conf.erb
+++ b/puppet/modules/web/templates/debugs.conf.erb
@@ -4,6 +4,8 @@
 
   DocumentRoot /var/www/vhosts/debugs/htdocs
 
+  Options Indexes
+
   AuthType Digest
   AuthName "Foreman-debug uploads - restricted area"
   AuthBasicProvider file
