Use BasicAuth since the htpasswd resource can't supply a realm
Digest isn't more secure than Basic anyway see:
 https://httpd.apache.org/docs/2.4/mod/mod_auth_digest.html#using

--- a/puppet/modules/web/templates/debugs.conf.erb
+++ b/puppet/modules/web/templates/debugs.conf.erb
@@ -4,13 +4,14 @@
 
   DocumentRoot /var/www/vhosts/debugs/htdocs
 
-  Options Indexes
+  <Location />
+    Options Indexes
 
-  AuthType Digest
-  AuthName "Foreman-debug uploads - restricted area"
-  AuthBasicProvider file
-  AuthUserFile /var/www/vhosts/debugs/htpasswd
-  Require valid-user
+    AuthType Basic
+    AuthName "Foreman-debug uploads - restricted area"
+    AuthUserFile /var/www/vhosts/debugs/htpasswd
+    Require valid-user
+  </Location>
 
   ErrorLog /var/log/httpd/debugs_error_log
   LogLevel warn
