Fix katello-installer repo name

--- a/puppet/modules/slave/templates/test_pull_requests_katello_installer.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_katello_installer.json.erb
@@ -19,10 +19,10 @@
                                 "build_token": "<%= jenkins_build_token -%>"
                                 } },
       "repo_to_orgs": {
-        "katello": ["theforeman", "katello"]
+        "katello-installer": ["theforeman", "katello"]
       },
       "repo_to_pull_id_param": {
-        "katello": {
+        "katello-installer": {
           "git_url": "pr_git_url",
           "ref": "pr_git_ref",
           "number": "pr_number",
