--- a/puppet/modules/slave/templates/test_pull_requests_katello_installer.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_katello_installer.json.erb
@@ -16,6 +16,7 @@
       "allow_multiple": true,
       "run_without_trigger": true,
       "branches": { "*": {"jenkins_job_name": "test_katello_installer_pull_request",
+                                "downstream_job_name": "test_katello_installer",
                                 "build_token": "<%= jenkins_build_token -%>"
                                 } },
       "repo_to_orgs": {
