Update Jenkins reverse proxy config as per docs

--- a/puppet/modules/web/templates/jenkins.conf.erb
+++ b/puppet/modules/web/templates/jenkins.conf.erb
@@ -8,5 +8,6 @@
     Allow from all
   </Proxy>
   ProxyPreserveHost on
-  ProxyPass / http://localhost:8080/
+  ProxyPass / http://localhost:8080/ nocanon
+  ProxyPassReverse / http://localhost:8080/
 </VirtualHost>
