--- a/puppet/modules/slave/templates/test_pull_requests_foreman_discovery.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_discovery.json.erb
@@ -18,7 +18,7 @@
             "allow_multiple": true,
             "run_without_trigger": true,
             "branches": {
-                "*": {
+                "develop": {
                     "jenkins_job_name": "test_plugin_pull_request",
                     "downstream_job_name": "test_plugin_foreman_discovery",
                     "build_token": "<%= jenkins_build_token -%>",
@@ -26,6 +26,18 @@
                         "foreman_discovery": {
                             "plugin_repo": "https://github.com/theforeman/foreman_discovery.git",
                             "plugin_name": "foreman_discovery"
+                        }
+                    }
+                },
+                "2.0-stable": {
+                    "jenkins_job_name": "test_plugin_pull_request",
+                    "downstream_job_name": "test_plugin_foreman_discovery_2_0_stable",
+                    "build_token": "<%= jenkins_build_token -%>",
+                    "addtl_jenkins_params": {
+                        "foreman_discovery": {
+                            "plugin_repo": "https://github.com/theforeman/foreman_discovery.git",
+                            "plugin_name": "foreman_discovery",
+                            "foreman_branch": "1.7-stable"
                         }
                     }
                 }
