Add plugin_name to smart proxy plugin(s)

--- a/puppet/modules/slave/templates/test_pull_requests_smart_proxy_discovery.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_smart_proxy_discovery.json.erb
@@ -25,6 +25,7 @@
                     "addtl_jenkins_params": {
                         "smart_proxy_discovery": {
                             "plugin_repo": "https://github.com/theforeman/smart_proxy_discovery.git",
+                            "plugin_name": "smart_proxy_discovery"
                         }
                     }
                 }
