Enable PR testing on foreman-packaging deb/develop

--- a/puppet/modules/slave/templates/test_pull_requests_foreman_packaging.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_packaging.json.erb
@@ -18,6 +18,11 @@
             "allow_multiple": true,
             "run_without_trigger": true,
             "branches": {
+                "deb/develop": {
+                    "jenkins_job_name": "packaging_test_pull_request_deb",
+                    "downstream_job_name": "true",
+                    "build_token": "<%= jenkins_build_token -%>"
+                },
                 "rpm/develop": {
                     "jenkins_job_name": "packaging_test_pull_request_rpm",
                     "downstream_job_name": "true",
