Add git merge parameters to kafo PR jobs

--- a/puppet/modules/slave/templates/test_pull_requests_kafo.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_kafo.json.erb
@@ -23,7 +23,7 @@
         "kafo": ["theforeman", "katello"]
       },
       "repo_to_pull_id_param": {
-        "kafo": "pr_number"
+        "kafo": {"git_url":"pr_git_url","ref":"pr_git_ref","number":"pr_number"}
       }
     }
   }
