--- a/puppet/modules/slave/templates/test_pull_requests_kafo_parsers.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_kafo_parsers.json.erb
@@ -23,7 +23,7 @@
         "kafo_parsers": ["theforeman", "katello"]
       },
       "repo_to_pull_id_param": {
-        "kafo_parsers": "pr_number"
+        "kafo_parsers": {"git_url":"pr_git_url","ref":"pr_git_ref","number":"pr_number"}
       }
     }
   }
