--- a/puppet/modules/slave/templates/test_pull_requests_foreman_discovery.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_discovery.json.erb
@@ -20,7 +20,7 @@
             "branches": {
                 "develop": {
                     "jenkins_job_name": "test_plugin_pull_request",
-                    "downstream_job_name": "test_plugin_foreman_discovery",
+                    "downstream_job_name": "test_plugin_foreman_discovery_develop",
                     "build_token": "<%= jenkins_build_token -%>",
                     "addtl_jenkins_params": {
                         "foreman_discovery": {
@@ -31,7 +31,7 @@
                 },
                 "2.0-stable": {
                     "jenkins_job_name": "test_plugin_pull_request",
-                    "downstream_job_name": "test_plugin_foreman_discovery_2_0_stable",
+                    "downstream_job_name": "test_plugin_foreman_discovery_2.0_stable",
                     "build_token": "<%= jenkins_build_token -%>",
                     "addtl_jenkins_params": {
                         "foreman_discovery": {
