Test foreman_remote_execution against 1.9-stable

--- a/puppet/modules/slave/templates/test_pull_requests_foreman_remote_execution.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_remote_execution.json.erb
@@ -25,7 +25,8 @@
                     "addtl_jenkins_params": {
                         "foreman_remote_execution": {
                             "plugin_repo": "https://github.com/theforeman/foreman_remote_execution.git",
-                            "plugin_name": "foreman_remote_execution"
+                            "plugin_name": "foreman_remote_execution",
+                            "foreman_branch": "1.9-stable"
                         }
                     }
                 }
