Support multiple JJB config sets
Changes the jenkins_job_builder class to take a hash of configs,
allowing us to create a new centos.org set to configure our
ci.centos.org instance later.

--- a/puppet/modules/jenkins_job_builder/templates/jenkins_jobs.ini.erb
+++ b/puppet/modules/jenkins_job_builder/templates/jenkins_jobs.ini.erb
@@ -1,11 +1,11 @@
 [jenkins]
-user=<%= username %>
-password=<%= password %>
-url=<%= url %>
+user=<%= @username %>
+password=<%= @password %>
+url=<%= @url %>
 
 [job_builder]
 ignore_cache=True
 keep_descriptions=False
-include_path=.:/etc/jenkins_jobs/config
+include_path=.:/etc/jenkins_jobs/<%= @config_name %>
 recursive=True
 allow_duplicates=False
