--- a/puppet/modules/slave/templates/test_pull_requests_smart_proxy_remote_execution_ssh.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_smart_proxy_remote_execution_ssh.json.erb
@@ -25,7 +25,8 @@
                     "addtl_jenkins_params": {
                         "smart_proxy_remote_execution_ssh": {
                             "plugin_repo": "https://github.com/theforeman/smart_proxy_remote_execution_ssh.git",
-                            "plugin_name": "smart_proxy_remote_execution_ssh"
+                            "plugin_name": "smart_proxy_remote_execution_ssh",
+                            "min_ruby193": "true"
                         }
                     }
                 }
