Move Apache vhost logs to /var/log
Current vhost logs are under /var/www/vhosts/*/logs which isn't
accessible to logrotate under SELinux.  Rather than add custom policy
or customise the labelling, move them to the usual /var/log/ location.

--- a/puppet/modules/apache/templates/vhost-ssl.erb
+++ b/puppet/modules/apache/templates/vhost-ssl.erb
@@ -10,8 +10,8 @@
 
   LogLevel warn
 
-  ErrorLog <%= wwwroot %>/<%= name %>/logs/error.log
-  CustomLog <%= wwwroot %>/<%= name %>/logs/access.log combined
+  ErrorLog <%= logroot %>/<%= name %>_error.log
+  CustomLog <%= logroot %>/<%= name %>_access.log combined
 
   Include <%= wwwroot %>/<%= name%>/conf/*.conf
 
