--- a/puppet/modules/apache/templates/vhost.erb
+++ b/puppet/modules/apache/templates/vhost.erb
@@ -10,8 +10,8 @@
 
   LogLevel warn
 
-  ErrorLog <%= wwwroot %>/<%= name %>/logs/error.log
-  CustomLog <%= wwwroot %>/<%= name %>/logs/access.log "<%= accesslog_format %>"
+  ErrorLog <%= logroot %>/<%= name %>_error.log
+  CustomLog <%= logroot %>/<%= name %>_access.log "<%= accesslog_format %>"
 
   Include <%= wwwroot %>/<%= name%>/conf/*.conf
 
