Fix IP variable name in template

--- a/puppet/modules/secure_ssh/templates/auth_keys.erb
+++ b/puppet/modules/secure_ssh/templates/auth_keys.erb
@@ -4,7 +4,7 @@
     array = @allowed_ips
   else
     # Facts hash from Foreman
-    array = @ip_data.values.map{|a| a['ipaddress']}
+    array = @ip_data.values.map{|a| a['external_ip4']}
   end
 -%>
 <% array.sort.each do |ip| -%>
