Build armhf and arm64 archives

--- a/puppet/modules/freight/templates/freight.conf.erb
+++ b/puppet/modules/freight/templates/freight.conf.erb
@@ -16,3 +16,6 @@ GPG="packages@theforeman.org"
 
 # Follow symlinks in VARLIB
 SYMLINKS="on"
+
+# x86 plus supported ARM platforms
+ARCHS="i386 amd64 armhf arm64"
