Verify PR scanner JSON config files

--- a/puppet/modules/slave/templates/test_pull_requests_foreman_bootdisk.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_bootdisk.json.erb
@@ -9,7 +9,7 @@
     "irc_channel": "#theforeman-dev",
     "not_mergable_cache": "~/pr_tests/cache/test_pull_request_foreman_bootdisk_not_mergable",
     "repo_groups": {
-        "foreman_bootdisk": "foreman_bootdisk",
+        "foreman_bootdisk": "foreman_bootdisk"
     },
     "settings": {
         "test_settings": {
