--- a/puppet/modules/slave/templates/test_pull_requests_foreman_docker.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_docker.json.erb
@@ -9,7 +9,7 @@
     "irc_channel": "#theforeman-dev",
     "not_mergable_cache": "~/pr_tests/cache/test_pull_request_foreman_docker_not_mergable",
     "repo_groups": {
-        "foreman-docker": "foreman-docker",
+        "foreman-docker": "foreman-docker"
     },
     "settings": {
         "test_settings": {
