--- a/puppet/modules/slave/templates/test_pull_requests_foreman_tasks.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_tasks.json.erb
@@ -9,7 +9,7 @@
     "irc_channel": "#theforeman-dev",
     "not_mergable_cache": "~/pr_tests/cache/test_pull_request_foreman_tasks_not_mergable",
     "repo_groups": {
-        "foreman-tasks": "foreman-tasks",
+        "foreman-tasks": "foreman-tasks"
     },
     "settings": {
         "test_settings": {
