--- a/puppet/modules/slave/templates/test_pull_requests_foreman_discovery.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_discovery.json.erb
@@ -9,7 +9,7 @@
     "irc_channel": "#theforeman-dev",
     "not_mergable_cache": "~/pr_tests/cache/test_pull_request_foreman_discovery_not_mergable",
     "repo_groups": {
-        "foreman_discovery": "foreman_discovery",
+        "foreman_discovery": "foreman_discovery"
     },
     "settings": {
         "test_settings": {
