--- a/puppet/modules/slave/templates/test_pull_requests_foreman_remote_execution.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_remote_execution.json.erb
@@ -9,7 +9,7 @@
     "irc_channel": "#theforeman-dev",
     "not_mergable_cache": "~/pr_tests/cache/test_pull_request_foreman_remote_execution_not_mergable",
     "repo_groups": {
-        "foreman_remote_execution": "foreman_remote_execution",
+        "foreman_remote_execution": "foreman_remote_execution"
     },
     "settings": {
         "test_settings": {
