--- a/puppet/modules/slave/templates/test_pull_requests_foreman_templates.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_templates.json.erb
@@ -9,7 +9,7 @@
     "irc_channel": "#theforeman-dev",
     "not_mergable_cache": "~/pr_tests/cache/test_pull_request_foreman_templates_not_mergable",
     "repo_groups": {
-        "foreman_templates": "foreman_templates",
+        "foreman_templates": "foreman_templates"
     },
     "settings": {
         "test_settings": {
