--- a/puppet/modules/slave/templates/test_pull_requests_smart_proxy_abrt.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_smart_proxy_abrt.json.erb
@@ -9,7 +9,7 @@
     "irc_channel": "#theforeman-dev",
     "not_mergable_cache": "~/pr_tests/cache/test_pull_request_smart_proxy_abrt_not_mergable",
     "repo_groups": {
-        "smart_proxy_abrt": "smart_proxy_abrt",
+        "smart_proxy_abrt": "smart_proxy_abrt"
     },
     "settings": {
         "test_settings": {
