Permit IPv6 access via secure_ssh module
Use either external_ip4 or IPv6 facts to permit access via SSH keys to
the web server etc, as most Rackspace hosts have v6 connectivity and
some AAAA records.

--- a/puppet/modules/secure_ssh/templates/auth_keys.erb
+++ b/puppet/modules/secure_ssh/templates/auth_keys.erb
@@ -4,7 +4,7 @@
     array = @allowed_ips
   else
     # Facts hash from Foreman
-    array = @ip_data.values.map{|a| a['external_ip4']}
+    array = @ip_data.values.map{|a| a.values_at('external_ip4', 'external_ip6') }.compact.flatten
   end
 -%>
 <% array.sort.each do |ip| -%>
